--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -12,7 +12,7 @@ ENV TIMEZONE=Europe/Vienna \
 
 RUN dpkg --add-architecture i386 \
     && apt-get update \
-    && apt-get install -y crudini python3-pip redis-tools software-properties-common supervisor unzip wget xvfb \
+    && apt-get install -y crudini python3-pip redis-tools software-properties-common supervisor unzip wget xvfb rsync \
     && wget https://dl.winehq.org/wine-builds/winehq.key \
     && apt-key add winehq.key \
     && apt-add-repository 'https://dl.winehq.org/wine-builds/ubuntu/' \
